--- a/index.html
+++ b/index.html
@@ -4,12 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jahangir portfolio</title>
+    <title>Jahangir Protfolio</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@1&family=Roboto+Slab&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>
-        Lorem ipsum dolor sit amet consectetur adipisicing.
-    </h1>
+<section class="top-banner">
+        <div class="half-width">
+            <h1> Wellcome To</h1>
+            <h1> <span class="coler">Jahangir Alom</span> World</h1>
+            <h3>Build Ciimber and train Stopper</h3>
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates optio repudiandae voluptas modi hic quo.
+                Labore laborum officia numquam eius iste ut hic, ipsum quo nulla debitis nostrum qui possimus!</p>
+                <a class="link-button" target="_blank" href="#">HIRE ME</a>
+        </div >
+        <div class="half-width">
+            <img src="./images/jahangir alom2.png" alt="">
+        </div>
+</section>
 </body>
 </html>
