--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h3>Build Ciimber and train Stopper</h3>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates optio repudiandae voluptas modi hic quo.
                 Labore laborum officia numquam eius iste ut hic, ipsum quo nulla debitis nostrum qui possimus!</p>
-                <a class="link-button" target="_blank" href="#">HIRE ME</a>
+                <a class="link-button" target="_blank" href="https://github.com/jahangiralom99">HIRE ME</a>
         </div >
         <div class="half-width">
             <img src="./images/jahangir alom2.png" alt="">
