--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@
         <div class="half-width">
             <img src="./images/jahangir alom2.png" alt="">
         </div>
+        
 </section>
+    <section class="Dream-Big">
+        <div class="half-width">
+            <img src="./images/jahangir alom1.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big </h1>
+            <h2> Become A Web developer </h2>
+            <p> I already lerned the basic HTML and CSS.I can build Any simple Website.I Can even teach my grondma how to make simple website.My goal it to bulid 3 Website and learn advance topics.</p>
+
+            <a class="link-button" target="_blank" href="#">DOWNLOAD RESUME</a>
+        </div>
+    </section>
 </body>
 </html>
