--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<section class="top-banner">
+<section class="top-banner experince-area">
         <div class="half-width">
             <h1> Wellcome To</h1>
             <h1> <span class="coler">Jahangir Alom</span> World</h1>
@@ -25,7 +25,7 @@
         </div>
         
 </section>
-    <section class="Dream-Big">
+    <section class="Dream-Big experince-area">
         <div class="half-width">
             <img src="./images/jahangir alom1.png" alt="">
         </div>
@@ -37,5 +37,27 @@
             <a class="link-button" target="_blank" href="#">DOWNLOAD RESUME</a>
         </div>
     </section>
+    <section class="experonce">
+            <h1>Experinces</h1>
+        <div class="experince-area">
+            <div class="half-width">
+            
+                <h1>full Stack Web developer</h1>
+                <h3 class="coler">2021-present | pro web developer</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos officia quo maiores rem! Esse libero, optio porro,
+                    deserunt quis autem repudiandae consectetur sed et a sit quas veniam nam illum.</p>
+            </div>
+            <div class="half-width">
+                <h1>Baby Web Developer </h1>
+                <h3 class="coler">2021-2022 | Programming Hero Learner </h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti excepturi unde optio asperiores tenetur, atque
+                    illum ipsam. Quo temporibus quisquam excepturi recusandae atque fuga repellendus modi, laudantium minus
+                    exercitationem commodi.</p>
+            </div>
+        </div>
+    </section>
+
+
+
 </body>
 </html>
