--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
     <section class="experonce">
             <h1>Experinces</h1>
         <div class="experince-area">
-            <div class="half-width">
+            <div id="full" class="experince-item">
             
-                <h1>full Stack Web developer</h1>
+                <h2>full Stack Web developer</h2>
                 <h3 class="coler">2021-present | pro web developer</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos officia quo maiores rem! Esse libero, optio porro,
                     deserunt quis autem repudiandae consectetur sed et a sit quas veniam nam illum.</p>
             </div>
-            <div class="half-width">
-                <h1>Baby Web Developer </h1>
+            <div id="baby" class="experince-item">
+                <h2>Baby Web Developer </h2>
                 <h3 class="coler">2021-2022 | Programming Hero Learner </h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti excepturi unde optio asperiores tenetur, atque
                     illum ipsam. Quo temporibus quisquam excepturi recusandae atque fuga repellendus modi, laudantium minus
@@ -56,8 +56,8 @@
             </div>
         </div>
     </section>
-
-
-
-</body>
+    <section>
+<footer>
+    <p>&copy;All Copy Right rseereved.</p>
+</footer>
 </html>
